--- a/labweek11/styles.css
+++ b/labweek11/styles.css
@@ -1,4 +1,5 @@
 .book {
+	position: relative;
 	height: 30vh;
 	width: 60vh;
 	background-color: #852e05;
@@ -10,12 +11,20 @@
 	max-height: 40vh;
 	min-width: 20vh;
 	max-width: 60vh;
+	border-radius: 30px;
+
 }
 
-/*.mouseDownBox {
-	height: 10px;
-	width: 20px;
-	background-color: #852e05;
-	display: flex;	
-	align-items: center;
-}*/
+.pages {
+	position: absolute;
+	display: flex;
+	height: 35vh;
+	width: 55vh;
+	background-color: #f5eedc;
+	box-shadow: 2em 2em 5em black;
+	z-index: 3;
+	top: 10em;
+	left: 10em;
+
+}
+
