--- a/labweek11/styles.css
+++ b/labweek11/styles.css
@@ -1,5 +1,5 @@
 .book {
-	position: relative;
+	position: absolute;
 	height: 30vh;
 	width: 60vh;
 	background-color: #852e05;
@@ -12,19 +12,42 @@
 	min-width: 20vh;
 	max-width: 60vh;
 	border-radius: 30px;
+	z-index: 4;
 
 }
 
 .pages {
 	position: absolute;
-	display: flex;
 	height: 35vh;
 	width: 55vh;
 	background-color: #f5eedc;
-	box-shadow: 2em 2em 5em black;
+	box-shadow: 2em 2em 9em black;
 	z-index: 3;
-	top: 10em;
-	left: 10em;
+	top: 7em;
+	left: 8em;
 
 }
 
+.pages2 {
+	position: absolute;
+	height: 35vh;
+	width: 55vh;
+	background-color: #f5eedc;
+	z-index: 3;
+	top: 7em;
+	left: 8em;
+}
+
+.mouseDownBox {
+	position: absolute;
+	height: 35px;
+	width: 35px;
+	z-index: 4;
+	top: 7em;
+	left: 8em;
+}
+
+.mouseDownBox > img {
+	height: 35vh;
+	width: 55vh;
+}
