--- a/labweek11/styles.css
+++ b/labweek11/styles.css
@@ -2,8 +2,8 @@
 	position: absolute;
 	height: 30vh;
 	width: 60vh;
-	background-color: #852e05;
-	display: flex;	
+	background-color: #b5ada7;
+	display: grid;	
 	align-items: center;
 	justify-content: center;
 	margin: 100px;
@@ -11,8 +11,9 @@
 	max-height: 40vh;
 	min-width: 20vh;
 	max-width: 60vh;
-	border-radius: 30px;
-	z-index: 4;
+	border-radius: 4px;
+	z-index: -4;
+	top: .1%;
 
 }
 
@@ -24,7 +25,8 @@
 	box-shadow: 2em 2em 9em black;
 	z-index: 3;
 	top: 7em;
-	left: 8em;
+	left: 7em;
+	z-index: 4;
 
 }
 
@@ -32,10 +34,11 @@
 	position: absolute;
 	height: 35vh;
 	width: 55vh;
-	background-color: #f5eedc;
+	background-color: #d9d5d2;
 	z-index: 3;
-	top: 7em;
-	left: 8em;
+	top: 7.5em;
+	left: 7.5em;
+	z-index: 3;
 }
 
 .mouseDownBox {
@@ -44,10 +47,19 @@
 	width: 35px;
 	z-index: 4;
 	top: 7em;
-	left: 8em;
+	left: 7em;
 }
 
 .mouseDownBox > img {
 	height: 35vh;
 	width: 55vh;
+}
+
+#news {
+	color: red;
+	font-size: 40px;
+	text-align: center;
+	font-weight: 700;
+	z-index: 10;
+	top: 10%;
 }
